--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>quarkus-panache-mock</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!-- Flyway specific dependencies -->
     <dependency>
       <groupId>io.quarkus</groupId>
