--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=root
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sendmessage?autoReconnect=true
+quarkus.datasource.jdbc.max-size=10
 
 quarkus.flyway.migrate-at-start=true
 
