--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=root
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sendmessage?autoReconnect=true
-quarkus.datasource.jdbc.max-size=10
+
+quarkus.datasource.reactive.url=mysql://localhost:3306/sendmessage
 
 quarkus.flyway.migrate-at-start=true
+quarkus.flyway.baseline-on-migrate=true
 
+quarkus.http.port=8080
